--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,14 @@ box-shadow: hsla(0, 0%, 100%, 0.366) 1px 2px;
 margin: 5px;
 }
 
+.formulario-login{
+  margin: 1rem;
+  padding: 1rem;
+  background-color: #000000;
+  color: #ffffff;
+}
+
+
 /* ERROR 404 */
 @use postcss-cssnext;
 /* helpers/align.css */
