--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,11 @@ body::-webkit-scrollbar{
   width: 5px;
 }
 body::-webkit-scrollbar-thumb{
-  background: rgba(255, 255, 255, 0.185);
-  border-right: 2px solid black;
+  background: #ffffff2f;
+  border-right: 0.2rem solid #000000;
 }
 
-body{
-    background: black;
-}
+
 /* estilos de iconos del FOOTER*/
  ai.bi {
         font-size: 1.5rem;
@@ -40,15 +38,15 @@ a:hover,:visited{
 
 /*estilos de los MODALES*/
 .modal-header{
-    background-color: rgb(0, 0, 0,0.7);
+    background-color: #000000b3;
 }
 .modal-body{
-    background-color: rgb(0, 0, 0,0.7);
+    background-color: #000000b3;
 }
 
 /* main */
 .bgmain{
-    background-color: hsla(0, 0%, 30%, 0.256);
+    background-color: #4d4d4d41;
     text-align: center;
     padding: 1px;
     background-size: cover;
@@ -56,16 +54,10 @@ a:hover,:visited{
 }
 
 .sectioncard{
-box-shadow: hsla(0, 0%, 100%, 0) 1px 2px;
-margin: 5px;
+box-shadow: #ffffff00 0.1rem 0.2rem;
+margin: 0.3rem;
 }
 
-.formulario-login{
-  margin: 1rem;
-  padding: 1rem;
-  background-color: #1f1f1f44;
-  color: #ffffff;
-}
 
 .sidebar{
   background-color: #000000;
@@ -73,7 +65,26 @@ margin: 5px;
   font-size: x-large;
 }
 
-
+.formulario-de-registro{
+  color: #ffffff;
+  background-color: #000000;
+ 
+}
+.form-group{
+  margin-bottom: 2rem;
+ 
+}
+.center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #000000;
+  color: #fff;
+}
+.container-fluid{
+  background-color: #030303;
+  
+}
 /* ERROR 404 */
   postcss-cssnext;
 /* helpers/align.css */
